Fix Speaker registeration button's visibility in mobile view

--- a/css/custom.css
+++ b/css/custom.css
@@ -192,3 +192,8 @@
 #myBtn:hover {
     background-color: transparent;
 }
+@media all and (max-width: 767px) {
+  .hero-slider .btn-register {
+    display: inline-block;
+  }
+}
